[package]
name = "http_rust"
version = "0.1.0"
license = "ISC"
edition = "2018"
build = "build.rs"
exclude = ["index.node"]

[lib]
name = "http_rust"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.72"
once_cell = "1.8.0"

[build-dependencies]
neon-build = "0.9"

[dependencies.neon]
version = "0.10.0-alpha.3"
default-features = false
features = ["channel-api", "napi-6", "promise-api"]
